Added PrintGCApplicationStoppedTime in example